2010-02-22  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/intersect_line_plane.m:

	- INTERSECT_LINE_PLANE Find intersection of a line with a plane.

	* Add FiltersToolbox/scinrrd_box.m:

	- SCINRRD_BOX Compute tight box around SCI NRRD segmentation.

2010-02-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_optimal_intersecting_plane.m:

	- Interface change: Change input arguments.

	- Now, instead of intering RAD for smoothing of the segmentation,
	we enter a struct called param, that contains new options for the
	optimisation.

	- Added global optimisation, that is, instead of using fminsearch,
	now you can sweep a whole range of azimuth and elevation angles to
	compute the area values. Because we are optimising only two
	variables, this is not much slower than using fminsearch, and it
	provides a much better insight into the results.

	* PointsToolbox/vec2rotmat.m:

	- Add input argument so that an initial guess for the 2 vectors
	orthogonal to V is provided (as part of an initial guess for the
	rotation matrix). This will constrain the infinite space of
	possible rotations to the closest one to the one we had.

2010-02-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_index2world.m,
	FileFormatToolbox/scinrrd_world2index.m:

	- Real world coordinates are to be presented as (x,y,z), while
	indices are to be presented as (r,c,s). But note that x <-> c, and
	y <-> r.

	* PointsToolbox/scinrrd_pca.m:

	- Fix bug: The convention has to be that rows are y-coordinates,
	and columns are x-coordinates.

	* PointsToolbox/plotaxes.m:

	- Add input argument for the origin of coordinates.

2010-02-18  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_optimal_intersecting_plane.m:

	- Remove unnecessary function nesting.

2010-02-17  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_optimal_intersecting_plane.m:

	- Interface change: Change argument order.